--- a/src/CarFunction/CarFunction.csproj
+++ b/src/CarFunction/CarFunction.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="1.0.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.1.0" />
+    <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
