--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,12 +15,8 @@ phases:
     commands:
       - echo Build started on `date`
       - cd src/CarFunction
-      - dotnet lambda package-ci --output-template output-serverless.json
+      - dotnet lambda package-ci --output-template ../../output-serverless.json
       - cd ../..
-  post_build:
-    commands:
-      - echo Post build started on 'date'
-      - cp src/CarFunction/output-serverless.json ../..
 artifacts:
   files:
     - output-serverless.json
