--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
       - echo Build started on `date`
       - cd src/CarFunction
       - dotnet lambda package-ci --output-template ../../output-serverless.json
-      - cd ../..
 artifacts:
   files:
     - output-serverless.json
+  discard-paths: yes
